Fix toc jump with scroll margin

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -96,6 +96,7 @@ body {
     }
     h1, h2, h3{
         padding-top: 30px;
+        scroll-margin-top: 70px;
     }
 }
 
